# quantum-flutter-sqlite

./: .gitignore  CHANGELOG.md  DEVELOP.md  README.md  ffigen.yaml  pubspec.yaml
example/: pubspec.yaml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: quantum.podspec  quantum_sqlite.podspec
ios/Classes/: Fts5Simple.h  Fts5Simple.mm  QuantumPlugin.swift
lib/: quantum.dart  quantum_sqlite.dart
macos/: CMakeLists.txt  CMakePresets.json  quantum.podspec  quantum_sqlite.podspec
macos/Libraries/: libsimple.dylib
macos/Libraries/arm64/: libsimple.dylib
macos/src/: main.cc
src/: CMakeLists.txt  CMakePresets.json  Info.plist  README.md  quantum.cc  quantum.h  test.cc  test.h
src/database/: database.cpp  database.h
test/: quantum_test.dart
